k8s/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: norge360-public-web
spec:
  type: ClusterIP
  selector:
    app: norge360-public-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: norge360-auth-web
spec:
  type: ClusterIP
  selector:
    app: norge360-auth-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
